Move data folder to root and update to TFT_eSPI 2.3.80
Moved data folder to root so it can be easy accessed
by platformIO tools
Version 2.3.80 of TFT_eSPI had some problem with
TTGO Display that was fixed in 2.3.81

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 .vscode/launch.json
 .vscode/ipch
 
+# Don't check in your changed version with your wifi password
+wifi_mqtt_creds.h
+
 # Prerequisites
 *.d
 
