did some further rework. use .cpp extension instead of .ino add common include to provide extern definitions this code still requires some more cleanup/polish.
Author:    andreas loeffler <al@exitzero.de>

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,14 @@
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 .vscode/ipch
+*~
 
 # Don't check in your changed version with your wifi password
 wifi_mqtt_creds.h
+client.crt.h
+client.key.h
+server_mqtt.crt.h
+
 
 # Prerequisites
 *.d
