--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,8 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
+;board_build.partitions = huge_app.csv
+
 lib_deps = 
 	ayushsharma82/AsyncElegantOTA @ ^2.2.6
 	h2zero/NimBLE-Arduino @ ^1.3.1
@@ -25,10 +27,14 @@ lib_deps =
 	rfetick/MPU6050_light @ ^1.1.0
 	pololu/VL53L0X @ ^1.3.0
 	bodmer/TFT_eSPI@^2.3.81
+	
 build_flags = 
 	-Os
+	-DTREADMILL_MODEL="TAURUS_9_5"
+	-DNOMQTTCERTS
 	-DCORE_DEBUG_LEVEL=0
 	-DUSER_SETUP_LOADED=1
+	-DTTGO_T_DISPLAY
 	-DUSE_TFT_ESPI
 	-DST7789_DRIVER=1
 	-DENABLE_TFT=1
