--- a/.github/workflows/platformio-ci.yml
+++ b/.github/workflows/platformio-ci.yml
@@ -34,7 +34,17 @@ jobs:
         pip install --upgrade platformio
     - name: Run PlatformIO
       run: |
-        #cd code/include
         #for h in `ls -1 *.h.sample`; do l=${h%.sample}; ln -s $h $l; done
-        #cd ..
+        cat << _end_of_file > include/wifi_mqtt_creds.h
+        #ifndef _wifi_mqtt_creds_h_
+        #define _wifi_mqtt_creds_h_
+        const char* wifi_ssid = "<WIFI NAME>";
+        const char* wifi_pass = "<WIFI PASSWD>";
+        const char* mqtt_host = "host.org";
+        const char* mqtt_user = "user";
+        const char* mqtt_pass = "passw0rd";
+        const unsigned mqtt_port = 8883;
+        #endif
+        _end_of_file
+
         pio run -v -e ESP32_TTGO_DISPLAY_TFT_eSPI
