--- a/platformio.ini
+++ b/platformio.ini
@@ -8,15 +8,12 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:ESP32_TTGO_DISPLAY_TFT_eSPI]
-platform = espressif32
-board = esp32dev
-framework = arduino
-monitor_speed = 115200
-upload_speed = 921600
-;board_build.partitions = huge_app.csv
+[platformio]
+default_envs = ESP32_TTGO_DISPLAY_TFT_eSPI
 
-lib_deps = 
+
+[common_env_data]
+lib_deps_ext =
 	ayushsharma82/AsyncElegantOTA @ ^2.2.6
 	h2zero/NimBLE-Arduino @ ^1.3.1
 	ottowinter/ESPAsyncWebServer-esphome @ ^2.0.1
@@ -26,13 +23,8 @@ lib_deps =
 	paulstoffregen/Time @ ^1.6.1
 	rfetick/MPU6050_light @ ^1.1.0
 	pololu/VL53L0X @ ^1.3.0
-	bodmer/TFT_eSPI@^2.3.81
-	
-build_flags = 
-	-Os
-	-DTREADMILL_MODEL="TAURUS_9_5"
-	-DNOMQTTCERTS
-	-DCORE_DEBUG_LEVEL=0
+
+build_flags_TFT_eSPI =
 	-DUSER_SETUP_LOADED=1
 	-DTTGO_T_DISPLAY
 	-DUSE_TFT_ESPI
@@ -59,6 +51,50 @@ build_flags =
 	-DSPI_FREQUENCY=40000000
 	-DSPI_READ_FREQUENCY=6000000
 
+
+[env:ESP32_TTGO_DISPLAY_TFT_eSPI]
+platform = espressif32
+board = esp32dev
+framework = arduino
+monitor_speed = 115200
+upload_speed = 921600
+;board_build.partitions = huge_app.csv
+
+lib_deps =
+	${common_env_data.lib_deps_ext}
+	bodmer/TFT_eSPI@^2.3.81
+
+build_flags =
+	-Os
+	-DTREADMILL_MODEL="TAURUS_9_5"
+	-DCORE_DEBUG_LEVEL=0
+	${common_env_data.build_flags_TFT_eSPI}
+
+
+[env:ESP32_TTGO_DISPLAY_TFT_eSPI_SSL]
+platform = espressif32
+board = esp32dev
+framework = arduino
+monitor_speed = 115200
+upload_speed = 921600
+board_build.partitions = ssl_app.csv
+
+
+lib_deps =
+        WiFiClientSecure
+	${common_env_data.lib_deps_ext}
+	bodmer/TFT_eSPI@^2.3.81
+
+build_flags =
+	-Os
+	-DTREADMILL_MODEL="TAURUS_9_5"
+	-DCORE_DEBUG_LEVEL=0
+	-DMQTT_USE_SSL
+	${common_env_data.build_flags_TFT_eSPI}
+
+
+
+
 [env:ESP32_TTGO_DISPLAY_LovyanGFX]
 platform = espressif32
 board = esp32dev
@@ -66,18 +102,11 @@ framework = arduino
 board_build.partitions = no_ota.csv
 monitor_speed = 115200
 upload_speed = 921600
-lib_deps = 
-	ayushsharma82/AsyncElegantOTA @ ^2.2.6
-	h2zero/NimBLE-Arduino @ ^1.3.1
-	ottowinter/ESPAsyncWebServer-esphome @ ^2.0.1
-	knolleary/PubSubClient @ ^2.8
-	bblanchon/ArduinoJson @ ^6.18.5
-	lennarthennigs/Button2 @ ^1.6.5
-	paulstoffregen/Time @ ^1.6.1
-	rfetick/MPU6050_light @ ^1.1.0
-	pololu/VL53L0X @ ^1.3.0
+lib_deps =
+	${common_env_data.lib_deps_ext}
 	lovyan03/LovyanGFX@>=0.4.10
-build_flags = 
+
+build_flags =
 	-Os
 	-DCORE_DEBUG_LEVEL=0
 	-DUSER_SETUP_LOADED=1
@@ -91,18 +120,11 @@ board_build.partitions = no_ota.csv
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
-lib_deps = 
-	ayushsharma82/AsyncElegantOTA @ ^2.2.6
-	h2zero/NimBLE-Arduino @ ^1.3.1
-	ottowinter/ESPAsyncWebServer-esphome @ ^2.0.1
-	knolleary/PubSubClient @ ^2.8
-	bblanchon/ArduinoJson @ ^6.18.5
-	lennarthennigs/Button2 @ ^1.6.5
-	paulstoffregen/Time @ ^1.6.1
-	rfetick/MPU6050_light @ ^1.1.0
-	pololu/VL53L0X @ ^1.3.0
-	bodmer/TFT_eSPI@^2.3.81
-build_flags = 
+lib_deps =
+	 ${common_env_data.lib_deps_ext}
+	 bodmer/TFT_eSPI@^2.3.81
+
+build_flags =
 	-Os
 	-DCORE_DEBUG_LEVEL=5
 	-DUSER_SETUP_LOADED=1
@@ -146,18 +168,11 @@ board_build.partitions = no_ota.csv
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
-lib_deps = 
-	ayushsharma82/AsyncElegantOTA @ ^2.2.6
-	h2zero/NimBLE-Arduino @ ^1.3.1
-	ottowinter/ESPAsyncWebServer-esphome @ ^2.0.1
-	knolleary/PubSubClient @ ^2.8
-	bblanchon/ArduinoJson @ ^6.18.5
-	lennarthennigs/Button2 @ ^1.6.5
-	paulstoffregen/Time @ ^1.6.1
-	rfetick/MPU6050_light @ ^1.1.0
-	pololu/VL53L0X @ ^1.3.0
+lib_deps =
+	 ${common_env_data.lib_deps_ext}
 	lovyan03/LovyanGFX@>=0.4.10
-build_flags = 
+
+build_flags =
 	-Os
 	-DCORE_DEBUG_LEVEL=5
 	-DUSER_SETUP_LOADED=1
