--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,6 @@
 [platformio]
 default_envs = ESP32_TTGO_DISPLAY_TFT_eSPI
 
-
 [common_env_data]
 lib_deps_ext =
 	ayushsharma82/AsyncElegantOTA @ ^2.2.6
@@ -24,9 +23,13 @@ lib_deps_ext =
 	rfetick/MPU6050_light @ ^1.1.0
 	pololu/VL53L0X @ ^1.3.0
 
+build_flags_settings =
+	-Os
+	-DTREADMILL_MODEL="TAURUS_9_5"
+	-DCORE_DEBUG_LEVEL=0
+
 build_flags_TFT_eSPI =
 	-DUSER_SETUP_LOADED=1
-	-DTTGO_T_DISPLAY
 	-DUSE_TFT_ESPI
 	-DST7789_DRIVER=1
 	-DENABLE_TFT=1
@@ -65,11 +68,9 @@ lib_deps =
 	bodmer/TFT_eSPI@^2.3.81
 
 build_flags =
-	-Os
-	-DTREADMILL_MODEL="TAURUS_9_5"
-	-DCORE_DEBUG_LEVEL=0
+	-DTARGET_TTGO_T_DISPLAY
+	${common_env_data.build_flags_settings}
 	${common_env_data.build_flags_TFT_eSPI}
-
 
 [env:ESP32_TTGO_DISPLAY_TFT_eSPI_SSL]
 platform = espressif32
@@ -81,19 +82,15 @@ board_build.partitions = ssl_app.csv
 
 
 lib_deps =
-        WiFiClientSecure
+    WiFiClientSecure
 	${common_env_data.lib_deps_ext}
 	bodmer/TFT_eSPI@^2.3.81
 
 build_flags =
-	-Os
-	-DTREADMILL_MODEL="TAURUS_9_5"
-	-DCORE_DEBUG_LEVEL=0
 	-DMQTT_USE_SSL
+	-DTARGET_TTGO_T_DISPLAY
+	${common_env_data.build_flags_settings}
 	${common_env_data.build_flags_TFT_eSPI}
-
-
-
 
 [env:ESP32_TTGO_DISPLAY_LovyanGFX]
 platform = espressif32
@@ -107,11 +104,10 @@ lib_deps =
 	lovyan03/LovyanGFX@>=0.4.10
 
 build_flags =
-	-Os
-	-DCORE_DEBUG_LEVEL=0
-	-DUSER_SETUP_LOADED=1
+	-DTARGET_TTGO_T_DISPLAY
 	-DLGFX_TTGO_TDISPLAY
 	-DLGFX_USE_V1
+	${common_env_data.build_flags_settings}
 
 [env:ESP32_WT32-SC01_TFT_eSPI_not_working]
 platform = espressif32
@@ -125,9 +121,7 @@ lib_deps =
 	 bodmer/TFT_eSPI@^2.3.81
 
 build_flags =
-	-Os
-	-DCORE_DEBUG_LEVEL=5
-	-DUSER_SETUP_LOADED=1
+	-DTARGET_WT32-SC01
 	-DNO_MPU6050
 	-DNO_VL53L0X
 	-DUSE_TFT_ESPI
@@ -158,9 +152,8 @@ build_flags =
 	-DSPI_FREQUENCY=40000000
 	-DSPI_READ_FREQUENCY=400000
 	-DSPI_TOUCH_FREQUENCY=400000
-	
-; -DLV_TICK_CUSTOM=1
-	
+	${common_env_data.build_flags_settings}
+		
 [env:ESP32_WT32-SC01_LovyanGFX]
 platform = espressif32
 board = esp-wrover-kit
@@ -173,12 +166,9 @@ lib_deps =
 	lovyan03/LovyanGFX@>=0.4.10
 
 build_flags =
-	-Os
-	-DCORE_DEBUG_LEVEL=5
-	-DUSER_SETUP_LOADED=1
+	-DTARGET_WT32-SC01
 	-DNO_MPU6050
 	-DNO_VL53L0X
-	;-DLGFX_AUTODETECT
 	-DLGFX_WT32_SC01
 	-DLGFX_USE_V1
-
+	${common_env_data.build_flags_settings}
