--- a/platformio.ini
+++ b/platformio.ini
@@ -11,12 +11,11 @@
 [platformio]
 default_envs = ESP32_TTGO_DISPLAY_TFT_eSPI
 
-
 [common_env_data]
-lib_deps_ext =
+lib_deps_ext = 
 	ayushsharma82/AsyncElegantOTA @ ^2.2.6
 	h2zero/NimBLE-Arduino @ ^1.3.1
-	ottowinter/ESPAsyncWebServer-esphome @ ^2.0.1
+	;ottowinter/ESPAsyncWebServer-esphome @ ^2.1.0
 	knolleary/PubSubClient @ ^2.8
 	bblanchon/ArduinoJson @ ^6.18.5
 	lennarthennigs/Button2 @ ^1.6.5
@@ -24,7 +23,7 @@ lib_deps_ext =
 	rfetick/MPU6050_light @ ^1.1.0
 	pololu/VL53L0X @ ^1.3.0
 
-build_flags_TFT_eSPI =
+build_flags_tft_espi = 
 	-DUSER_SETUP_LOADED=1
 	-DTTGO_T_DISPLAY
 	-DUSE_TFT_ESPI
@@ -51,25 +50,23 @@ build_flags_TFT_eSPI =
 	-DSPI_FREQUENCY=40000000
 	-DSPI_READ_FREQUENCY=6000000
 
-
 [env:ESP32_TTGO_DISPLAY_TFT_eSPI]
 platform = espressif32
 board = esp32dev
 framework = arduino
+;platform_packages = 
+;	platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
 monitor_speed = 115200
 upload_speed = 921600
-;board_build.partitions = huge_app.csv
-
-lib_deps =
+lib_deps = 
 	${common_env_data.lib_deps_ext}
+	ottowinter/ESPAsyncWebServer-esphome @ ^2.1.0
 	bodmer/TFT_eSPI@^2.3.81
-
-build_flags =
+build_flags = 
 	-Os
 	-DTREADMILL_MODEL="TAURUS_9_5"
 	-DCORE_DEBUG_LEVEL=0
 	${common_env_data.build_flags_TFT_eSPI}
-
 
 [env:ESP32_TTGO_DISPLAY_TFT_eSPI_SSL]
 platform = espressif32
@@ -78,22 +75,25 @@ framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
 board_build.partitions = ssl_app.csv
+board_build.embed_txtfiles =
+	server.crt
+	server.key
 
-
-lib_deps =
-        WiFiClientSecure
+lib_deps = 
+	WiFiClientSecure
 	${common_env_data.lib_deps_ext}
 	bodmer/TFT_eSPI@^2.3.81
-
-build_flags =
+	;khoih-prog/AsyncTCP_SSL@^1.1.0
+	https://github.com/lefty01/AsyncTCP_SSL
+	https://github.com/lefty01/ESPAsyncWebServer#ssl
+	https://github.com/lefty01/AsyncElegantOTA
+build_flags = 
 	-Os
 	-DTREADMILL_MODEL="TAURUS_9_5"
 	-DCORE_DEBUG_LEVEL=0
 	-DMQTT_USE_SSL
+	-DASYNC_TCP_SSL_ENABLED
 	${common_env_data.build_flags_TFT_eSPI}
-
-
-
 
 [env:ESP32_TTGO_DISPLAY_LovyanGFX]
 platform = espressif32
@@ -102,11 +102,11 @@ framework = arduino
 board_build.partitions = no_ota.csv
 monitor_speed = 115200
 upload_speed = 921600
-lib_deps =
+lib_deps = 
 	${common_env_data.lib_deps_ext}
+	ottowinter/ESPAsyncWebServer-esphome @ ^2.1.0
 	lovyan03/LovyanGFX@>=0.4.10
-
-build_flags =
+build_flags = 
 	-Os
 	-DCORE_DEBUG_LEVEL=0
 	-DUSER_SETUP_LOADED=1
@@ -120,11 +120,11 @@ board_build.partitions = no_ota.csv
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
-lib_deps =
-	 ${common_env_data.lib_deps_ext}
-	 bodmer/TFT_eSPI@^2.3.81
-
-build_flags =
+lib_deps = 
+	${common_env_data.lib_deps_ext}
+	ottowinter/ESPAsyncWebServer-esphome @ ^2.1.0
+	bodmer/TFT_eSPI@^2.3.81
+build_flags = 
 	-Os
 	-DCORE_DEBUG_LEVEL=5
 	-DUSER_SETUP_LOADED=1
@@ -148,9 +148,9 @@ build_flags =
 	-DTFT_BL=23
 	-DTOUCH_CS=PIN_D2
 	-DLOAD_GLCD
-	-DLOAD_FONT2  
+	-DLOAD_FONT2
 	-DLOAD_FONT4
-	-DLOAD_FONT6 
+	-DLOAD_FONT6
 	-DLOAD_FONT7
 	-DLOAD_FONT8
 	-DLOAD_GFXFF
@@ -158,9 +158,7 @@ build_flags =
 	-DSPI_FREQUENCY=40000000
 	-DSPI_READ_FREQUENCY=400000
 	-DSPI_TOUCH_FREQUENCY=400000
-	
-; -DLV_TICK_CUSTOM=1
-	
+
 [env:ESP32_WT32-SC01_LovyanGFX]
 platform = espressif32
 board = esp-wrover-kit
@@ -168,17 +166,15 @@ board_build.partitions = no_ota.csv
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
-lib_deps =
-	 ${common_env_data.lib_deps_ext}
+lib_deps = 
+	${common_env_data.lib_deps_ext}
+	ottowinter/ESPAsyncWebServer-esphome @ ^2.1.0
 	lovyan03/LovyanGFX@>=0.4.10
-
-build_flags =
+build_flags = 
 	-Os
 	-DCORE_DEBUG_LEVEL=5
 	-DUSER_SETUP_LOADED=1
 	-DNO_MPU6050
 	-DNO_VL53L0X
-	;-DLGFX_AUTODETECT
 	-DLGFX_WT32_SC01
 	-DLGFX_USE_V1
-
