--- a/platformio.ini
+++ b/platformio.ini
@@ -172,3 +172,53 @@ build_flags =
 	-DLGFX_WT32_SC01
 	-DLGFX_USE_V1
 	${common_env_data.build_flags_settings}
+
+
+[env:ESP32_TTGO_T4_TFT_eSPI]
+platform = espressif32
+board = esp-wrover-kit
+board_build.partitions = ssl_app.csv
+framework = arduino
+monitor_speed = 115200
+upload_speed = 921600
+
+lib_deps =
+	${common_env_data.lib_deps_ext}
+	bodmer/TFT_eSPI@^2.4.2
+
+build_flags =
+	-DTARGET_TTGO_T4
+	-DNO_VL53L0X
+	-DUSE_TFT_ESPI
+	-DUSER_SETUP_LOADED=1
+	-DILI9341_DRIVER=1
+	-DTFT_WIDTH=240
+	-DTFT_HEIGHT=320
+	-DDISPLAY_WIDTH=240
+	-DDISPLAY_HEIGHT=320
+	;-DUSE_HSPI_PORT
+	;-DBUTTON1_PIN=38
+	;-DBUTTON2_PIN=37
+	;-DBUTTON3_PIN=39
+	;-DPIN_SDA=21
+	;-DPIN_SCL=22
+	-DTFT_MISO=12
+	-DTFT_MOSI=23
+	-DTFT_SCLK=18
+	-DTFT_CS=27
+	-DTFT_DC=32
+	-DTFT_RST=5
+	-DTFT_BL=4
+	;-DTFT_BACKLIGHT_ON=HIGH
+	-DTFT_ROTATE=0
+	-DLOAD_GLCD
+	-DLOAD_FONT2
+	-DLOAD_FONT4
+	-DLOAD_FONT6
+	-DLOAD_FONT7
+	-DLOAD_FONT8
+	-DLOAD_GFXFF
+	-DSMOOTH_FONT
+	-DSPI_FREQUENCY=80000000
+	;-DSPI_READ_FREQUENCY=6000000
+	${common_env_data.build_flags_settings}
