--- a/.github/workflows/platformio-ci.yml
+++ b/.github/workflows/platformio-ci.yml
@@ -37,5 +37,4 @@ jobs:
         cd include
         for h in `ls -1 *.h.sample`; do l=${h%.sample}; ln -s $h $l; done
         cd ..
-        pio run -v -e ESP32_TTGO_DISPLAY_TFT_eSPI
-        pio run -v -e ESP32_TTGO_DISPLAY_TFT_eSPI_SSL
+        pio run -v -e ESP32_TTGO_DISPLAY_TFT_eSPI -e ESP32_TTGO_DISPLAY_TFT_eSPI_SSL
