update version. lost build flag during merge

--- a/platformio.ini
+++ b/platformio.ini
@@ -58,8 +58,6 @@ build_flags_tft_espi =
 platform = espressif32
 board = esp32dev
 framework = arduino
-;platform_packages = 
-;	platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
 monitor_speed = 115200
 upload_speed = 921600
 lib_deps = 
@@ -110,6 +108,7 @@ lib_deps =
 	lovyan03/LovyanGFX@>=0.4.10
 
 build_flags =
+	-DTARGET_TTGO_T_DISPLAY
 	-DLGFX_TTGO_TDISPLAY
 	-DLGFX_USE_V1
 	${common_env_data.build_flags_settings}
