--- a/platformio.ini
+++ b/platformio.ini
@@ -69,6 +69,8 @@ lib_deps =
 
 build_flags =
 	-DTARGET_TTGO_T_DISPLAY
+	;-DBUTTON_1=35
+	;-DBUTTON_2=0
 	${common_env_data.build_flags_settings}
 	${common_env_data.build_flags_TFT_eSPI}
 
@@ -154,6 +156,7 @@ build_flags =
 	-DSPI_TOUCH_FREQUENCY=400000
 	${common_env_data.build_flags_settings}
 		
+
 [env:ESP32_WT32-SC01_LovyanGFX]
 platform = espressif32
 board = esp-wrover-kit
@@ -184,6 +187,7 @@ upload_speed = 921600
 
 lib_deps =
 	${common_env_data.lib_deps_ext}
+	ottowinter/ESPAsyncWebServer-esphome @ ^2.1.0
 	bodmer/TFT_eSPI@^2.4.2
 
 build_flags =
