basic support for ttgo T4

--- a/platformio.ini
+++ b/platformio.ini
@@ -200,12 +200,11 @@ build_flags =
 	-DTFT_HEIGHT=320
 	-DDISPLAY_WIDTH=240
 	-DDISPLAY_HEIGHT=320
-	;-DUSE_HSPI_PORT
 	;-DBUTTON1_PIN=38
 	;-DBUTTON2_PIN=37
 	;-DBUTTON3_PIN=39
-	;-DPIN_SDA=21
-	;-DPIN_SCL=22
+	-DPIN_SDA=21
+	-DPIN_SCL=22
 	-DTFT_MISO=12
 	-DTFT_MOSI=23
 	-DTFT_SCLK=18
@@ -213,7 +212,6 @@ build_flags =
 	-DTFT_DC=32
 	-DTFT_RST=5
 	-DTFT_BL=4
-	;-DTFT_BACKLIGHT_ON=HIGH
 	-DTFT_ROTATE=0
 	-DLOAD_GLCD
 	-DLOAD_FONT2
@@ -223,6 +221,10 @@ build_flags =
 	-DLOAD_FONT8
 	-DLOAD_GFXFF
 	-DSMOOTH_FONT
-	-DSPI_FREQUENCY=80000000
-	;-DSPI_READ_FREQUENCY=6000000
+	-DSPI_FREQUENCY=40000000
+	-DSPI_READ_FREQUENCY=6000000
+	;-DSPI_FREQUENCY=27000000
+	;-DSPI_READ_FREQUENCY=20000000
+	;-DTFT_BACKLIGHT_ON=HIGH
+	;-DUSE_HSPI_PORT
 	${common_env_data.build_flags_settings}
