Incline on NordicTrack and web controll of treadmill
This adds support for treadmill models that have a folded incline mechanic where the sensor is on the front part and not on the running part.

The webUI now controll incline and speed when HW supports it.

--- a/platformio.ini
+++ b/platformio.ini
@@ -121,7 +121,7 @@ lib_deps =
 	 bodmer/TFT_eSPI@^2.3.81
 
 build_flags =
-	-DTARGET_WT32-SC01
+	-DTARGET_WT32_SC01
 	-DNO_MPU6050
 	-DNO_VL53L0X
 	-DUSE_TFT_ESPI
@@ -157,6 +157,7 @@ build_flags =
 [env:ESP32_WT32-SC01_LovyanGFX]
 platform = espressif32
 board = esp-wrover-kit
+upload_protocol = esptool
 board_build.partitions = no_ota.csv
 framework = arduino
 monitor_speed = 115200
@@ -166,7 +167,7 @@ lib_deps =
 	lovyan03/LovyanGFX@>=0.4.10
 
 build_flags =
-	-DTARGET_WT32-SC01
+	-DTARGET_WT32_SC01
 	-DNO_MPU6050
 	-DNO_VL53L0X
 	-DLGFX_WT32_SC01
