--- a/platformio.ini
+++ b/platformio.ini
@@ -25,7 +25,7 @@ lib_deps_ext =
 
 build_flags_settings =
 	-Os
-	-DTREADMILL_MODEL="TAURUS_9_5"
+	-DTREADMILL_MODEL=TAURUS_9_5
 	-DCORE_DEBUG_LEVEL=0
 
 build_flags_TFT_eSPI =
