work on touch buttons

--- a/platformio.ini
+++ b/platformio.ini
@@ -112,6 +112,7 @@ build_flags =
 	${common_env_data.build_flags_settings}
 
 [env:ESP32_WT32-SC01_TFT_eSPI_not_working]
+; 4MB SPI Flash, 8MB PSRAM
 platform = espressif32
 board = esp-wrover-kit
 board_build.partitions = no_ota.csv
@@ -158,6 +159,8 @@ build_flags =
 		
 
 [env:ESP32_WT32-SC01_LovyanGFX]
+; 4MB SPI Flash, 8MB PSRAM
+; Screen model: WT-352215-A2
 platform = espressif32
 board = esp-wrover-kit
 upload_protocol = esptool
@@ -174,6 +177,12 @@ build_flags =
 	-DNO_VL53L0X
 	-DLGFX_WT32_SC01
 	-DLGFX_USE_V1
+	-DTFT_WIDTH=320
+	-DTFT_HEIGHT=480
+	;-DDISPLAY_WIDTH=128
+	;-DDISPLAY_HEIGHT=240
+	-DTFT_BL=23
+	;-DTOUCH_CALLIBRATION_AT_STARTUP
 	${common_env_data.build_flags_settings}
 
 
