get some touch buttons working using LGFX_Button. note: here font size of the button lable seems to change for no reason!?.

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ default_envs = ESP32_TTGO_DISPLAY_TFT_eSPI
 lib_deps_ext =
 	ayushsharma82/AsyncElegantOTA @ ^2.2.6
 	h2zero/NimBLE-Arduino @ ^1.3.1
+	;h2zero/esp-nimble-cpp TODO: what is difference between NimBLE-Arduino and esp-nimble-cpp!?
 	ottowinter/ESPAsyncWebServer-esphome @ ^2.0.1
 	knolleary/PubSubClient @ ^2.8
 	bblanchon/ArduinoJson @ ^6.18.5
@@ -167,7 +168,10 @@ upload_protocol = esptool
 board_build.partitions = no_ota.csv
 framework = arduino
 monitor_speed = 115200
-upload_speed = 921600
+upload_speed  = 921600
+;upload_port   = /dev/ttyUSB0
+;monitor_port  = /dev/ttyUSB0
+
 lib_deps =
 	${common_env_data.lib_deps_ext}
 	lovyan03/LovyanGFX@>=0.4.10
@@ -179,8 +183,12 @@ build_flags =
 	-DLGFX_USE_V1
 	-DTFT_WIDTH=320
 	-DTFT_HEIGHT=480
-	;-DDISPLAY_WIDTH=128
-	;-DDISPLAY_HEIGHT=240
+	-DDRAW_STATS_WIDTH=240
+	-DDRAW_STATS_HEIGHT=135
+	-DDRAW_CTRL_WIDTH=240
+	-DDRAW_CTRL_HEIGHT=135
+	-DHAS_TOUCH_DISPLAY=1
+	-DNUM_TOUCH_BUTTONS=6
 	-DTFT_BL=23
 	;-DTOUCH_CALLIBRATION_AT_STARTUP
 	${common_env_data.build_flags_settings}
