--- a/platformio.ini
+++ b/platformio.ini
@@ -23,7 +23,7 @@ lib_deps_ext =
 	paulstoffregen/Time @ ^1.6.1
 	rfetick/MPU6050_light @ ^1.1.0
 	pololu/VL53L0X @ ^1.3.0
-
+  https://github.co	m/alanswx/ESPAsyncWiFiManager.git
 build_flags_settings =
 	-Os
 	-DTREADMILL_MODEL=TAURUS_9_5
@@ -240,8 +240,26 @@ build_flags =
 	-DSMOOTH_FONT
 	-DSPI_FREQUENCY=40000000
 	-DSPI_READ_FREQUENCY=6000000
-	;-DSPI_FREQUENCY=27000000
-	;-DSPI_READ_FREQUENCY=20000000
-	;-DTFT_BACKLIGHT_ON=HIGH
-	;-DUSE_HSPI_PORT
+	${common_env_data.build_flags_settings}
+
+[env:ESP32_WROOMD]
+platform = espressif32
+board = esp32dev
+upload_protocol = esptool
+board_build.partitions = no_ota.csv
+framework = arduino
+monitor_speed = 115200
+upload_speed = 921600
+lib_deps = 
+	${common_env_data.lib_deps_ext}
+;	https://github.com/me-no-dev/ESPAsyncWebServer.git
+;	https://github.com/khoih-prog/ESPAsync_WiFiManager.git
+;	khoih-prog/ESPAsync_WiFiManager_Lite@^1.15.0
+;	khoih-prog/ESPAsync_WiFiManager_Lite@^1.9.0
+;    https://github.com/alanswx/ESPAsyncWiFiManager.git
+build_flags = 
+	-DTARGET_WT32_WROOMD
+	-DNO_DISPLAY
+	-DNO_MPU6050
+	-DNO_VL53L0X
 	${common_env_data.build_flags_settings}
