--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = ESP32_TTGO_DISPLAY_TFT_eSPI
+default_envs = ESP32_WT32-SC01_LovyanGFX
 
 [common_env_data]
 lib_deps_ext =
@@ -165,6 +165,7 @@ build_flags =
 platform = espressif32
 board = esp-wrover-kit
 upload_protocol = esptool
+board_build.filesystem = littlefs
 board_build.partitions = no_ota.csv
 framework = arduino
 monitor_speed = 115200
