removed obselete variables
removed obselete variables

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,1 @@
-idf_component_register(SRCS "config.cpp" "ESP32_TTGO_FTMS.cpp")
+idf_component_register(SRCS "display.cpp" "Hardware.cpp" "config.cpp" "ESP32_TTGO_FTMS.cpp")
