Add build of ESP32_WROOMD_HEADLESS to GitHub tests
Signed-off-by: Zingo Andersen <zingo@zingo.org>

--- a/platformio.ini
+++ b/platformio.ini
@@ -240,7 +240,7 @@ build_flags =
 	-DSPI_READ_FREQUENCY=6000000
 	${common_env_data.build_flags_settings}
 
-[env:ESP32_WROOMD]
+[env:ESP32_WROOMD_HEADLESS]
 platform = espressif32
 board = esp32dev
 upload_protocol = esptool
