--- a/.github/workflows/platformio-ci.yml
+++ b/.github/workflows/platformio-ci.yml
@@ -43,4 +43,5 @@ jobs:
                 -e ESP32_TTGO_DISPLAY_TFT_eSPI_SSL \
                 -e ESP32_TTGO_DISPLAY_LovyanGFX \
                 -e ESP32_WT32-SC01_LovyanGFX \
-                -e ESP32_TTGO_T4_TFT_eSPI
+                -e ESP32_TTGO_T4_TFT_eSPI \
+                -e ESP32_WROOMD_HEADLESS
