Remove and cleanup target list in platformio.ini
Signed-off-by: Zingo Andersen <zingo@zingo.org>

--- a/.github/workflows/platformio-ci.yml
+++ b/.github/workflows/platformio-ci.yml
@@ -39,9 +39,8 @@ jobs:
         cd ..
         ln -s server.crt.sample server.crt
         ln -s server.key.sample server.key
-        pio run -e ESP32_TTGO_DISPLAY_TFT_eSPI \
-                -e ESP32_TTGO_DISPLAY_TFT_eSPI_SSL \
-                -e ESP32_TTGO_DISPLAY_LovyanGFX \
-                -e ESP32_WT32-SC01_LovyanGFX \
+        pio run -e ESP32_TTGO_DISPLAY \
+                -e ESP32_TTGO_DISPLAY_SSL \
+                -e ESP32_WT32-SC01 \
                 -e ESP32_TTGO_T4_TFT_eSPI \
                 -e ESP32_WROOMD_HEADLESS
