--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = ESP32_WT32-SC01_LovyanGFX
+default_envs = ESP32_WT32-SC01
 
 [common_env_data]
 lib_deps_ext =
@@ -55,26 +55,26 @@ build_flags_TFT_eSPI =
 	-DSPI_READ_FREQUENCY=6000000
 
 
-[env:ESP32_TTGO_DISPLAY_TFT_eSPI]
+[env:ESP32_TTGO_DISPLAY]
 platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
-;board_build.partitions = huge_app.csv
-
+board_build.partitions = no_ota.csv
 lib_deps =
 	${common_env_data.lib_deps_ext}
-	bodmer/TFT_eSPI@^2.3.81
+	lovyan03/LovyanGFX@>=0.4.10
 
 build_flags =
 	-DTARGET_TTGO_T_DISPLAY
+	-DLGFX_TTGO_TDISPLAY
+	-DLGFX_USE_V1
 	;-DBUTTON_1=35
 	;-DBUTTON_2=0
 	${common_env_data.build_flags_settings}
-	${common_env_data.build_flags_TFT_eSPI}
 
-[env:ESP32_TTGO_DISPLAY_TFT_eSPI_SSL]
+[env:ESP32_TTGO_DISPLAY_SSL]
 platform = espressif32
 board = esp32dev
 framework = arduino
@@ -86,77 +86,18 @@ board_build.partitions = ssl_app.csv
 lib_deps =
     WiFiClientSecure
 	${common_env_data.lib_deps_ext}
-	bodmer/TFT_eSPI@^2.3.81
+	lovyan03/LovyanGFX@>=0.4.10
 
 build_flags =
 	-DMQTT_USE_SSL
 	-DTARGET_TTGO_T_DISPLAY
-	${common_env_data.build_flags_settings}
-	${common_env_data.build_flags_TFT_eSPI}
-
-[env:ESP32_TTGO_DISPLAY_LovyanGFX]
-platform = espressif32
-board = esp32dev
-framework = arduino
-board_build.partitions = no_ota.csv
-monitor_speed = 115200
-upload_speed = 921600
-lib_deps =
-	${common_env_data.lib_deps_ext}
-	lovyan03/LovyanGFX@>=0.4.10
-
-build_flags =
-	-DTARGET_TTGO_T_DISPLAY
 	-DLGFX_TTGO_TDISPLAY
 	-DLGFX_USE_V1
+	;-DBUTTON_1=35
+	;-DBUTTON_2=0
 	${common_env_data.build_flags_settings}
 
-[env:ESP32_WT32-SC01_TFT_eSPI_not_working]
-; 4MB SPI Flash, 8MB PSRAM
-platform = espressif32
-board = esp-wrover-kit
-board_build.partitions = no_ota.csv
-framework = arduino
-monitor_speed = 115200
-upload_speed = 921600
-lib_deps =
-	${common_env_data.lib_deps_ext}
-	bodmer/TFT_eSPI@^2.3.81
-
-build_flags =
-	-DTARGET_WT32_SC01
-	-DUSE_TFT_ESPI
-	-DST7796_DRIVER=1
-	-DTFT_WIDTH=320
-	-DTFT_HEIGHT=480
-	-DDISPLAY_WIDTH=320
-	-DDISPLAY_HEIGHT=480
-	-DUSE_HSPI_PORT=1
-	-DPIN_SDA=18
-	-DPIN_SCL=19
-	-DTFT_MISO=-1
-	-DTFT_MOSI=13
-	-DTFT_SCLK=14
-	-DTFT_CS=15
-	-DTFT_DC=21
-	-DTFT_RST=22
-	-DTFT_BL=23
-	-DTOUCH_CS=PIN_D2
-	-DLOAD_GLCD
-	-DLOAD_FONT2  
-	-DLOAD_FONT4
-	-DLOAD_FONT6 
-	-DLOAD_FONT7
-	-DLOAD_FONT8
-	-DLOAD_GFXFF
-	-DSMOOTH_FONT
-	-DSPI_FREQUENCY=40000000
-	-DSPI_READ_FREQUENCY=400000
-	-DSPI_TOUCH_FREQUENCY=400000
-	${common_env_data.build_flags_settings}
-		
-
-[env:ESP32_WT32-SC01_LovyanGFX]
+[env:ESP32_WT32-SC01]
 ; 4MB SPI Flash, 8MB PSRAM
 ; Screen model: WT-352215-A2
 platform = espressif32
@@ -189,7 +130,6 @@ build_flags =
 	-DHAS_TOUCH_DISPLAY=1
 	-DNUM_TOUCH_BUTTONS=6
 	-DTFT_BL=23
-	;-DTOUCH_CALLIBRATION_AT_STARTUP
 	${common_env_data.build_flags_settings}
 
 
