for T4 the button2 tap handler did not work anymore (this button can act on long or short press) some "fix" of coding style i.e. for if statements place open brace at end of line not ext line (that is not yet consistent, but I would really appreciate if we could stick with this style) add one idea to copy the "correct" treadmill config file into data during buildfs by means of extra script (note: currently only in the t4 env ... to be discussed if you guys like that as well) copied another t4 env inside the platformio.ini to prepare switch from tft_espi to lvgl

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,12 +22,17 @@ lib_deps_ext =
 	lennarthennigs/Button2 @ ^1.6.5
 	paulstoffregen/Time @ ^1.6.1
 	rfetick/MPU6050_light @ ^1.1.0
-    https://github.com/alanswx/ESPAsyncWiFiManager.git
+	https://github.com/alanswx/ESPAsyncWiFiManager.git
 build_flags_settings =
 	-Os
 	-DTREADMILL_MODEL=TAURUS_9_5
 	-DCORE_DEBUG_LEVEL=0
 	-I include/
+
+;treadmill=Northtrack12_2_Si
+;treadmill=SoleF85
+treadmill=Taurus9_5
+
 
 [env:ESP32_TTGO_DISPLAY]
 platform = espressif32
@@ -149,6 +154,8 @@ build_flags =
 [env:ESP32_TTGO_T4_TFT_eSPI]
 platform = espressif32
 board = esp-wrover-kit
+board_build.filesystem = littlefs
+extra_scripts = post:scripts/prepare_littlefs.py
 board_build.partitions = ssl_app.csv
 framework = arduino
 monitor_speed = 115200
@@ -158,11 +165,59 @@ lib_deps =
 	${common_env_data.lib_deps_ext}
 	ottowinter/ESPAsyncWebServer-esphome @ ^2.1.0
 	bodmer/TFT_eSPI@^2.4.2
-    lvgl/lvgl@^8.1.0
+	lvgl/lvgl@^8.1.0
 
 build_flags =
 	-DTARGET_TTGO_T4
 	-DUSE_TFT_ESPI
+	-DUSER_SETUP_LOADED=1
+	-DILI9341_DRIVER=1
+	-DTFT_WIDTH=240
+	-DTFT_HEIGHT=320
+	-DDISPLAY_WIDTH=240
+	-DDISPLAY_HEIGHT=320
+	;-DBUTTON1_PIN=38
+	;-DBUTTON2_PIN=37
+	;-DBUTTON3_PIN=39
+	-DPIN_SDA=21
+	-DPIN_SCL=22
+	-DTFT_MISO=12
+	-DTFT_MOSI=23
+	-DTFT_SCLK=18
+	-DTFT_CS=27
+	-DTFT_DC=32
+	-DTFT_RST=5
+	-DTFT_BL=4
+	-DTFT_ROTATE=0
+	-DLOAD_GLCD
+	-DLOAD_FONT2
+	-DLOAD_FONT4
+	-DLOAD_FONT6
+	-DLOAD_FONT7
+	-DLOAD_FONT8
+	-DLOAD_GFXFF
+	-DSMOOTH_FONT
+	-DSPI_FREQUENCY=40000000
+	-DSPI_READ_FREQUENCY=6000000
+	${common_env_data.build_flags_settings}
+
+[env:ESP32_TTGO_T4]
+platform = espressif32
+board = esp-wrover-kit
+board_build.partitions = ssl_app.csv
+board_build.filesystem = littlefs
+extra_scripts = post:scripts/prepare_littlefs.py
+framework = arduino
+monitor_speed = 115200
+upload_speed = 921600
+
+lib_deps =
+	${common_env_data.lib_deps_ext}
+	ottowinter/ESPAsyncWebServer-esphome @ ^2.1.0
+	lvgl/lvgl@^8.1.0
+
+build_flags =
+	-DTARGET_TTGO_T4
 	-DUSER_SETUP_LOADED=1
 	-DILI9341_DRIVER=1
 	-DTFT_WIDTH=240
