Add treadmill config to all targets
Signed-off-by: Zingo Andersen <zingo@zingo.org>

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,7 +25,6 @@ lib_deps_ext =
 	https://github.com/alanswx/ESPAsyncWiFiManager.git
 build_flags_settings =
 	-Os
-	-DTREADMILL_MODEL=TAURUS_9_5
 	-DCORE_DEBUG_LEVEL=0
 	-I include/
 
@@ -37,6 +36,8 @@ treadmill=Taurus9_5
 [env:ESP32_TTGO_DISPLAY]
 platform = espressif32
 board = esp32dev
+board_build.filesystem = littlefs
+extra_scripts = post:scripts/prepare_littlefs.py
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
@@ -57,6 +58,8 @@ build_flags =
 [env:ESP32_TTGO_DISPLAY_SSL]
 platform = espressif32
 board = esp32dev
+board_build.filesystem = littlefs
+extra_scripts = post:scripts/prepare_littlefs.py
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
@@ -83,10 +86,11 @@ build_flags =
 ; Screen model: WT-352215-A2
 platform = espressif32
 board = esp-wrover-kit
-upload_protocol = esptool
 board_build.filesystem = littlefs
+extra_scripts = post:scripts/prepare_littlefs.py
 board_build.partitions = no_ota.csv
 framework = arduino
+upload_protocol = esptool
 monitor_speed = 115200
 upload_speed  = 921600
 ;upload_port   = /dev/ttyUSB0
@@ -120,10 +124,11 @@ build_flags =
 ; Screen model: WT-352215-A2
 platform = espressif32
 board = esp-wrover-kit
-upload_protocol = esptool
 board_build.filesystem = littlefs
+extra_scripts = post:scripts/prepare_littlefs.py
 board_build.partitions = no_ota.csv
 framework = arduino
+upload_protocol = esptool
 monitor_speed = 115200
 upload_speed  = 921600
 ;upload_port   = /dev/ttyUSB0
@@ -252,9 +257,11 @@ build_flags =
 [env:ESP32_WROOMD_HEADLESS]
 platform = espressif32
 board = esp32dev
-upload_protocol = esptool
+board_build.filesystem = littlefs
+extra_scripts = post:scripts/prepare_littlefs.py
 board_build.partitions = no_ota.csv
 framework = arduino
+upload_protocol = esptool
 monitor_speed = 115200
 upload_speed = 921600
 lib_deps = 
