--- a/platformio.ini
+++ b/platformio.ini
@@ -51,6 +51,7 @@ build_flags =
 	-DTARGET_TTGO_T_DISPLAY
 	-DLGFX_TTGO_TDISPLAY
 	-DLGFX_USE_V1
+	-DGUI_LVGL
 	;-DBUTTON_1=35
 	;-DBUTTON_2=0
 	${common_env_data.build_flags_settings}
@@ -65,7 +66,6 @@ monitor_speed = 115200
 upload_speed = 921600
 board_build.partitions = ssl_app.csv
 
-
 lib_deps =
     WiFiClientSecure
 	${common_env_data.lib_deps_ext}
@@ -77,6 +77,7 @@ build_flags =
 	-DTARGET_TTGO_T_DISPLAY
 	-DLGFX_TTGO_TDISPLAY
 	-DLGFX_USE_V1
+	-DGUI_LVGL
 	;-DBUTTON_1=35
 	;-DBUTTON_2=0
 	${common_env_data.build_flags_settings}
@@ -109,12 +110,7 @@ build_flags =
 	-DLGFX_USE_V1
 	-DTFT_WIDTH=320
 	-DTFT_HEIGHT=480
-	-DDRAW_STATS_WIDTH=240
-	-DDRAW_STATS_HEIGHT=135
-	-DDRAW_CTRL_WIDTH=240
-	-DDRAW_CTRL_HEIGHT=135
 	-DHAS_TOUCH_DISPLAY=1
-	-DNUM_TOUCH_BUTTONS=6
 	-DTFT_BL=23
 	-DGUI_LVGL
 	${common_env_data.build_flags_settings}
