--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,7 @@
-idf_component_register(SRCS "net-control.cpp" "display.cpp" "Hardware.cpp" "config.cpp" "ESP32_TTGO_FTMS.cpp")
+idf_component_register( SRCS
+  "net-control.cpp"
+  "display.cpp"
+  "Hardware.cpp"
+  "config.cpp"
+  "ESP32_TTGO_FTMS.cpp"
+)
