--- a/platformio.ini
+++ b/platformio.ini
@@ -9,26 +9,44 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [common_env_data]
-lib_deps_ext = 
-	h2zero/NimBLE-Arduino @ ^1.3.1
-	knolleary/PubSubClient @ ^2.8
-	bblanchon/ArduinoJson @ ^6.18.5
+lib_ldf_mode = deep+
+;lib_compat_mode = soft
+lib_archive = no
+
+lib_ignore =
+    ESPAsyncWebServer
+    AsyncTCP
+
+lib_deps_ext =
+;       https://github.com/h2zero/esp-nimble-cpp/archive/refs/tags/v1.4.1.zip ;; nope not working 
+;       h2zero/NimBLE-Arduino@^2.3.7
+        h2zero/NimBLE-Arduino@^1.4.1
+        knolleary/PubSubClient @ ^2.8
+	bblanchon/ArduinoJson @ ^6.21.5
 	lennarthennigs/Button2
 	paulstoffregen/Time @ ^1.6.1
 	rfetick/MPU6050_light @ ^1.1.0
-	https://github.com/alanswx/ESPAsyncWiFiManager.git
-	ayushsharma82/ElegantOTA@^3.1.6
+        https://github.com/mathieucarbou/AsyncTCP.git#v3.2.14
+        https://github.com/mathieucarbou/ESPAsyncWebServer#v3.6.0
+        https://github.com/alanswx/ESPAsyncWiFiManager.git
+        ayushsharma82/ElegantOTA @ ^3.1.7
+
 build_flags_settings = 
 	-Os
+;       -Wno-odr
+        -fpermissive
+;       -flto
 	-DCORE_DEBUG_LEVEL=0
 	-DELEGANTOTA_USE_ASYNC_WEBSERVER=1
+        -DCONFIG_NIMBLE_CPP_LOG_LEVEL=0
+        -DCONFIG_BT_NIMBLE_DEBUG=0
 	-I include/
-lib_compat_mode = strict
-lib_ldf_mode = chain
+build_unflags = -O2 ; remove -O2 if set
+
 treadmill = Taurus9_5
 
 [env:ESP32_TTGO_DISPLAY]
-platform = espressif32
+platform = espressif32 @ 6.7.0 ; Arduino Core 2.0.16
 board = esp32dev
 board_build.filesystem = littlefs
 extra_scripts = post:scripts/prepare_littlefs.py
@@ -38,19 +56,18 @@ upload_speed = 921600
 board_build.partitions = no_ota.csv
 lib_deps = 
 	${common_env_data.lib_deps_ext}
-	lovyan03/LovyanGFX@>=0.4.10
-	lvgl/lvgl@^8.1.0
-	mathieucarbou/ESPAsyncWebServer@^3.3.23
-	mathieucarbou/AsyncTCP@^3.2.14
+	lovyan03/LovyanGFX @ ^1.2.7
+	lvgl/lvgl @ ^9.4.0
 build_flags = 
 	-DTARGET_TTGO_T_DISPLAY
 	-DLGFX_TTGO_TDISPLAY
 	-DLGFX_USE_V1
 	-DGUI_LVGL
+        -DUSE_LITTLEFS
 	${common_env_data.build_flags_settings}
 
 [env:ESP32_TTGO_DISPLAY_SSL]
-platform = espressif32
+platform = espressif32 @ 6.7.0 ; Arduino Core 2.0.16
 board = esp32dev
 board_build.filesystem = littlefs
 extra_scripts = post:scripts/prepare_littlefs.py
@@ -61,10 +78,8 @@ board_build.partitions = ssl_app.csv
 lib_deps = 
 	WiFiClientSecure
 	${common_env_data.lib_deps_ext}
-	lovyan03/LovyanGFX@>=0.4.10
-	lvgl/lvgl@^8.1.0
-	mathieucarbou/ESPAsyncWebServer@^3.3.23
-	mathieucarbou/AsyncTCP@^3.2.14
+	lovyan03/LovyanGFX @ ^1.2.7
+	lvgl/lvgl @ ^9.4.0
 build_flags = 
 	-DMQTT_USE_SSL
 	-DTARGET_TTGO_T_DISPLAY
@@ -74,7 +89,7 @@ build_flags =
 	${common_env_data.build_flags_settings}
 
 [env:ESP32_WT32-SC01]
-platform = espressif32
+platform = espressif32 @ 6.7.0 ; Arduino Core 2.0.16
 board = esp-wrover-kit
 board_build.filesystem = littlefs
 extra_scripts = post:scripts/prepare_littlefs.py
@@ -86,10 +101,8 @@ upload_speed = 921600
 debug_build_flags = -O0 -ggdb3 -g3
 lib_deps = 
 	${common_env_data.lib_deps_ext}
-	lovyan03/LovyanGFX@>=0.4.10
-	lvgl/lvgl@^8.1.0
-	mathieucarbou/ESPAsyncWebServer@^3.3.23
-	mathieucarbou/AsyncTCP@^3.2.14
+	lovyan03/LovyanGFX @ ^1.2.7
+	lvgl/lvgl @ ^9.4.0
 build_flags = 
 	-DMQTT_USE_SSL
 	-DTARGET_WT32_SC01
@@ -103,7 +116,7 @@ build_flags =
 	${common_env_data.build_flags_settings}
 
 [env:ESP32_WT32-SC01_OLD_TFT_GUI]
-platform = espressif32
+platform = espressif32 @ 6.7.0 ; Arduino Core 2.0.16
 board = esp-wrover-kit
 board_build.filesystem = littlefs
 extra_scripts = post:scripts/prepare_littlefs.py
@@ -115,9 +128,7 @@ upload_speed = 921600
 debug_build_flags = -O0 -ggdb3 -g3
 lib_deps = 
 	${common_env_data.lib_deps_ext}
-	lovyan03/LovyanGFX@>=0.4.10
-	mathieucarbou/ESPAsyncWebServer@^3.3.23
-	mathieucarbou/AsyncTCP@^3.2.14
+	lovyan03/LovyanGFX @ ^1.2.7
 build_flags = 
 	-DTARGET_WT32_SC01
 	-DLGFX_WT32_SC01
@@ -134,7 +145,7 @@ build_flags =
 	${common_env_data.build_flags_settings}
 
 [env:ESP32_TTGO_T4]
-platform = espressif32
+platform = espressif32 @ 6.7.0 ; Arduino Core 2.0.16
 board = esp-wrover-kit
 board_build.partitions = ssl_app.csv
 board_build.filesystem = littlefs
@@ -144,10 +155,8 @@ monitor_speed = 115200
 upload_speed = 921600
 lib_deps = 
 	${common_env_data.lib_deps_ext}
-	https://github.com/lefty01/LovyanGFX
-	lvgl/lvgl@^8.1.0
-	mathieucarbou/ESPAsyncWebServer@^3.3.23
-	mathieucarbou/AsyncTCP@^3.2.14
+	lovyan03/LovyanGFX @ ^1.2.7  ;;https://github.com/lefty01/LovyanGFX
+	lvgl/lvgl @ ^9.4.0
 build_flags = 
 	-DTARGET_TTGO_T4
 	-DLGFX_TTGO_T4_DISPLAY
@@ -173,7 +182,7 @@ build_flags =
 	${common_env_data.build_flags_settings}
 
 [env:ESP32_WROOMD_HEADLESS]
-platform = espressif32
+platform = espressif32 @ 6.7.0 ; Arduino Core 2.0.16
 board = esp32dev
 board_build.filesystem = littlefs
 extra_scripts = post:scripts/prepare_littlefs.py
@@ -184,8 +193,6 @@ monitor_speed = 115200
 upload_speed = 921600
 lib_deps = 
 	${common_env_data.lib_deps_ext}
-	mathieucarbou/ESPAsyncWebServer@^3.3.23
-	mathieucarbou/AsyncTCP@^3.2.14
 build_flags = 
 	-DTARGET_WT32_WROOMD
 	-DNO_DISPLAY
