fix mem issues with some targets.

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,29 +18,29 @@ lib_ignore =
     AsyncTCP
 
 lib_deps_ext =
-;       https://github.com/h2zero/esp-nimble-cpp/archive/refs/tags/v1.4.1.zip ;; nope not working 
-;       h2zero/NimBLE-Arduino@^2.3.7
-        h2zero/NimBLE-Arduino@^1.4.1
-        knolleary/PubSubClient @ ^2.8
-	bblanchon/ArduinoJson @ ^6.21.5
-	lennarthennigs/Button2
-	paulstoffregen/Time @ ^1.6.1
-	rfetick/MPU6050_light @ ^1.1.0
-        https://github.com/mathieucarbou/AsyncTCP.git#v3.2.14
-        https://github.com/mathieucarbou/ESPAsyncWebServer#v3.6.0
-        https://github.com/alanswx/ESPAsyncWiFiManager.git
-        ayushsharma82/ElegantOTA @ ^3.1.7
+;   https://github.com/h2zero/esp-nimble-cpp/archive/refs/tags/v1.4.1.zip ;; nope not working 
+;   h2zero/NimBLE-Arduino@^2.3.7
+    h2zero/NimBLE-Arduino@^1.4.1
+    knolleary/PubSubClient @ ^2.8
+    bblanchon/ArduinoJson @ ^6.21.5
+    lennarthennigs/Button2
+    paulstoffregen/Time @ ^1.6.1
+    rfetick/MPU6050_light @ ^1.1.0
+    https://github.com/mathieucarbou/AsyncTCP.git#v3.2.14
+    https://github.com/mathieucarbou/ESPAsyncWebServer#v3.6.0
+    https://github.com/alanswx/ESPAsyncWiFiManager.git
+    ayushsharma82/ElegantOTA @ ^3.1.7
 
-build_flags_settings = 
-	-Os
-;       -Wno-odr
-        -fpermissive
-;       -flto
-	-DCORE_DEBUG_LEVEL=0
-	-DELEGANTOTA_USE_ASYNC_WEBSERVER=1
-        -DCONFIG_NIMBLE_CPP_LOG_LEVEL=0
-        -DCONFIG_BT_NIMBLE_DEBUG=0
-	-I include/
+build_flags_settings =
+    -Os
+;   -Wno-odr
+    -fpermissive
+;   -flto
+    -DCORE_DEBUG_LEVEL=0
+    -DELEGANTOTA_USE_ASYNC_WEBSERVER=1
+    -DCONFIG_NIMBLE_CPP_LOG_LEVEL=0
+    -DCONFIG_BT_NIMBLE_DEBUG=0
+    -I include/
 build_unflags = -O2 ; remove -O2 if set
 
 treadmill = Taurus9_5
@@ -54,16 +54,17 @@ framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
 board_build.partitions = no_ota.csv
-lib_deps = 
-	${common_env_data.lib_deps_ext}
-	lovyan03/LovyanGFX @ ^1.2.7
-	lvgl/lvgl @ ^9.4.0
-build_flags = 
-	-DTARGET_TTGO_T_DISPLAY
-	-DLGFX_TTGO_TDISPLAY
-	-DLGFX_USE_V1
-	-DGUI_LVGL
-	${common_env_data.build_flags_settings}
+lib_deps =
+    ${common_env_data.lib_deps_ext}
+    lovyan03/LovyanGFX @ ^1.2.7
+    lvgl/lvgl @ ^9.4.0
+build_flags =
+    -DTARGET_TTGO_T_DISPLAY
+    -DLGFX_TTGO_TDISPLAY
+    -DLGFX_USE_V1
+    -DGUI_LVGL
+    -DBUFFER_LINES=8
+    ${common_env_data.build_flags_settings}
 
 [env:ESP32_TTGO_DISPLAY_SSL]
 platform = espressif32 @ 6.7.0 ; Arduino Core 2.0.16
@@ -74,18 +75,19 @@ framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
 board_build.partitions = ssl_app.csv
-lib_deps = 
-	WiFiClientSecure
-	${common_env_data.lib_deps_ext}
-	lovyan03/LovyanGFX @ ^1.2.7
-	lvgl/lvgl @ ^9.4.0
-build_flags = 
-	-DMQTT_USE_SSL
-	-DTARGET_TTGO_T_DISPLAY
-	-DLGFX_TTGO_TDISPLAY
-	-DLGFX_USE_V1
-	-DGUI_LVGL
-	${common_env_data.build_flags_settings}
+lib_deps =
+    WiFiClientSecure
+    ${common_env_data.lib_deps_ext}
+    lovyan03/LovyanGFX @ ^1.2.7
+    lvgl/lvgl @ ^9.4.0
+build_flags =
+    -DMQTT_USE_SSL
+    -DTARGET_TTGO_T_DISPLAY
+    -DLGFX_TTGO_TDISPLAY
+    -DLGFX_USE_V1
+    -DGUI_LVGL
+    -DBUFFER_LINES=8
+    ${common_env_data.build_flags_settings}
 
 [env:ESP32_WT32-SC01]
 platform = espressif32 @ 6.7.0 ; Arduino Core 2.0.16
@@ -98,21 +100,22 @@ upload_protocol = esptool
 monitor_speed = 115200
 upload_speed = 921600
 debug_build_flags = -O0 -ggdb3 -g3
-lib_deps = 
-	${common_env_data.lib_deps_ext}
-	lovyan03/LovyanGFX @ ^1.2.7
-	lvgl/lvgl @ ^9.4.0
-build_flags = 
-	-DMQTT_USE_SSL
-	-DTARGET_WT32_SC01
-	-DLGFX_WT32_SC01
-	-DLGFX_USE_V1
-	-DTFT_WIDTH=320
-	-DTFT_HEIGHT=480
-	-DHAS_TOUCH_DISPLAY=1
-	-DTFT_BL=23
-	-DGUI_LVGL
-	${common_env_data.build_flags_settings}
+lib_deps =
+    ${common_env_data.lib_deps_ext}
+    lovyan03/LovyanGFX @ ^1.2.7
+    lvgl/lvgl @ ^9.4.0
+build_flags =
+;   -DMQTT_USE_SSL
+    -DTARGET_WT32_SC01
+    -DLGFX_WT32_SC01
+    -DLGFX_USE_V1
+    -DTFT_WIDTH=320
+    -DTFT_HEIGHT=480
+    -DHAS_TOUCH_DISPLAY=1
+    -DTFT_BL=23
+    -DGUI_LVGL
+    -DBUFFER_LINES=6
+    ${common_env_data.build_flags_settings}
 
 [env:ESP32_WT32-SC01_OLD_TFT_GUI]
 platform = espressif32 @ 6.7.0 ; Arduino Core 2.0.16
@@ -125,23 +128,23 @@ upload_protocol = esptool
 monitor_speed = 115200
 upload_speed = 921600
 debug_build_flags = -O0 -ggdb3 -g3
-lib_deps = 
-	${common_env_data.lib_deps_ext}
-	lovyan03/LovyanGFX @ ^1.2.7
-build_flags = 
-	-DTARGET_WT32_SC01
-	-DLGFX_WT32_SC01
-	-DLGFX_USE_V1
-	-DTFT_WIDTH=320
-	-DTFT_HEIGHT=480
-	-DDRAW_STATS_WIDTH=240
-	-DDRAW_STATS_HEIGHT=135
-	-DDRAW_CTRL_WIDTH=240
-	-DDRAW_CTRL_HEIGHT=135
-	-DHAS_TOUCH_DISPLAY=1
-	-DNUM_TOUCH_BUTTONS=6
-	-DTFT_BL=23
-	${common_env_data.build_flags_settings}
+lib_deps =
+    ${common_env_data.lib_deps_ext}
+    lovyan03/LovyanGFX @ ^1.2.7
+build_flags =
+    -DTARGET_WT32_SC01
+    -DLGFX_WT32_SC01
+    -DLGFX_USE_V1
+    -DTFT_WIDTH=320
+    -DTFT_HEIGHT=480
+    -DDRAW_STATS_WIDTH=240
+    -DDRAW_STATS_HEIGHT=135
+    -DDRAW_CTRL_WIDTH=240
+    -DDRAW_CTRL_HEIGHT=135
+    -DHAS_TOUCH_DISPLAY=1
+    -DNUM_TOUCH_BUTTONS=6
+    -DTFT_BL=23
+    ${common_env_data.build_flags_settings}
 
 [env:ESP32_TTGO_T4]
 platform = espressif32 @ 6.7.0 ; Arduino Core 2.0.16
@@ -152,33 +155,38 @@ extra_scripts = post:scripts/prepare_littlefs.py
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
-lib_deps = 
-	${common_env_data.lib_deps_ext}
-	lovyan03/LovyanGFX @ ^1.2.7  ;;https://github.com/lefty01/LovyanGFX
-	lvgl/lvgl @ ^9.4.0
-build_flags = 
-	-DTARGET_TTGO_T4
-	-DLGFX_TTGO_T4_DISPLAY
-	-DLGFX_USE_V1
-	-DGUI_LVGL
-	-DTFT_WIDTH=240
-	-DTFT_HEIGHT=320
-	-DDISPLAY_WIDTH=240
-	-DDISPLAY_HEIGHT=320
-	-DBUTTON1_PIN=38
-	-DBUTTON2_PIN=37
-	-DBUTTON3_PIN=39
-	-DPIN_SDA=21
-	-DPIN_SCL=22
-	-DTFT_MISO=12
-	-DTFT_MOSI=23
-	-DTFT_SCLK=18
-	-DTFT_CS=27
-	-DTFT_DC=32
-	-DTFT_RST=5
-	-DTFT_BL=4
-	-DTFT_ROTATE=1
-	${common_env_data.build_flags_settings}
+lib_deps =
+    ${common_env_data.lib_deps_ext}
+    lovyan03/LovyanGFX @ ^1.2.7  ;;https://github.com/lefty01/LovyanGFX
+    lvgl/lvgl @ ^9.4.0
+build_flags =
+    -DTARGET_TTGO_T4
+    -DLGFX_TTGO_T4_DISPLAY
+    -DLGFX_USE_V1
+    -DGUI_LVGL
+    -DBUFFER_LINES=6
+    -DTFT_WIDTH=240
+    -DTFT_HEIGHT=320
+    -DDISPLAY_WIDTH=240
+    -DDISPLAY_HEIGHT=320
+    -DBUTTON1_PIN=38
+    -DBUTTON2_PIN=37
+    -DBUTTON3_PIN=39
+    -DPIN_SDA=21
+    -DPIN_SCL=22
+    -DTFT_MISO=12
+    -DTFT_MOSI=23
+    -DTFT_SCLK=18
+    -DTFT_CS=27
+    -DTFT_DC=32
+    -DTFT_RST=5
+    -DTFT_BL=4
+    -DTFT_ROTATE=1
+;   -DLV_STYLE_CONST_INIT
+    -ffunction-sections
+    -fdata-sections
+    --data-sections
+    ${common_env_data.build_flags_settings}
 
 [env:ESP32_WROOMD_HEADLESS]
 platform = espressif32 @ 6.7.0 ; Arduino Core 2.0.16
@@ -190,9 +198,9 @@ framework = arduino
 upload_protocol = esptool
 monitor_speed = 115200
 upload_speed = 921600
-lib_deps = 
-	${common_env_data.lib_deps_ext}
-build_flags = 
-	-DTARGET_WT32_WROOMD
-	-DNO_DISPLAY
-	${common_env_data.build_flags_settings}
+lib_deps =
+    ${common_env_data.lib_deps_ext}
+build_flags =
+    -DTARGET_WT32_WROOMD
+    -DNO_DISPLAY
+    ${common_env_data.build_flags_settings}
