--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -35,7 +35,10 @@ jobs:
           chmod +x llvm.sh
           sudo ./llvm.sh 21
           sudo ln -sf /usr/bin/clang-format-21 /usr/local/bin/clang-format
-          sudo ln -sf /usr/bin/clang-format-21 /usr/bin/clang-format
+          dpkg -L clang-21
+          dpkg -L clang-tools-21
+          ls -l /usr/bin/clang-format-21
+          #sudo ln -sf /usr/bin/clang-format-21 /usr/bin/clang-format
 
       - name: Show clang-format version
         run: |
