--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -34,14 +34,14 @@ jobs:
           wget https://apt.llvm.org/llvm.sh
           chmod +x llvm.sh
           sudo ./llvm.sh 21
+          sudo apt-get install -y clang-format-21
           sudo ln -sf /usr/bin/clang-format-21 /usr/local/bin/clang-format
-          dpkg -L clang-21
-          dpkg -L clang-tools-21
           ls -l /usr/bin/clang-format-21
           #sudo ln -sf /usr/bin/clang-format-21 /usr/bin/clang-format
 
       - name: Show clang-format version
         run: |
+          which clang-format
           clang-format --version
 
       # -------------------------------
