do not report clang format as error (for now)

--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -83,8 +83,8 @@ jobs:
             ### ⚠️ Clang-format issues detected in `${{ matrix.path }}`
             ${{ steps.read-diff.outputs.diff }}
 
-      - name: Fail if formatting is incorrect
+      - name: Report if formatting is incorrect
         if: steps.format-check.outputs.needs_formatting == 'true'
         run: |
           echo "Formatting issues detected in ${{ matrix.path }}."
-          exit 1
+          exit 0
