get comments for include and src, maybe

--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -79,6 +79,7 @@ jobs:
         uses: marocchino/sticky-pull-request-comment@v2
         with:
           recreate: false
+          header: clang-format-${{ matrix.path }}
           message: |
             ### ⚠️ Clang-format issues detected in `${{ matrix.path }}`
             ${{ steps.read-diff.outputs.diff }}
