changed stop watch logic which was not yet working (at least no control). switch from modifying esp system time and transmitting the time to client to a browser only stop watch with auto-pause mode based on speed. drawback not keeping time on the esp or sending it back from browse means refresh of browser would reset value.

--- a/.editorconfig
+++ b/.editorconfig
@@ -36,6 +36,13 @@ indent_style = space
 indent_size = 2
 
 # ---------------------------------------------------------
+# JS / javascript
+# ---------------------------------------------------------
+[*.js]
+indent_style = space
+indent_size = 2
+
+# ---------------------------------------------------------
 # Markdown (preserve whitespace)
 # ---------------------------------------------------------
 [*.md]
