javascript debounce to not flood websocket queue. add no-cache header option to let browser always reload potential new html/js file. improve backend websocket handling to spend less time in event handler.

--- a/platformio.ini
+++ b/platformio.ini
@@ -53,6 +53,8 @@ extra_scripts = post:scripts/prepare_littlefs.py
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
+monitor_filters = esp32_exception_decoder
+build_type = debug
 board_build.partitions = no_ota.csv
 lib_deps =
     ${common_env_data.lib_deps_ext}
@@ -198,6 +200,8 @@ framework = arduino
 upload_protocol = esptool
 monitor_speed = 115200
 upload_speed = 921600
+monitor_filters = esp32_exception_decoder
+build_type = debug
 lib_deps =
     ${common_env_data.lib_deps_ext}
 build_flags =
